# ROS2_Project

ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/vision_rescue_bot/lib/vision_rescue_bot/: camera_simulator  vision_node
ros2_ws/install/vision_rescue_bot/share/vision_rescue_bot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/vision_rescue_bot/: package.xml  setup.cfg  setup.py
ros2_ws/src/vision_rescue_bot/vision_rescue_bot/: camera_simulator.py  vision_node.py
